# python_templates

./: .gitlab-ci.yml  requirements.txt
basic/: cookiecutter.json
basic/{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
basic/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.package_name}}.py
basic/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py
docs/: cookiecutter.json
docs/docs/: conf.py  index.md  requirements.txt
docs/docs/source/: conf.py  index.md
docs/docs/source/advanced/: configuration.md
docs/docs/source/api/: index.md
docs/docs/source/user_guide/: getting_started.md  installation.md  quickstart.md
docs/docs/tutorial/: getting_started.md
